@@ -65,9 +65,7 @@ else:
     else:
         for varBindTableRow in varBindTable:
             for name, val in varBindTableRow:
-                (modName, symName), indices = name
-                indices = '.'.join(['"%s"' % x.prettyPrint() for x in indices ])
-                print('%s::%s.%s = %s' % (modName, symName, indices, val.prettyPrint()))
+                print('%s = %s' % (name.prettyPrint(), val.prettyPrint()))
 
 
 # Send a series of SNMP GETBULK requests
@@ -100,5 +98,5 @@ else:
     else:
         for varBindTableRow in varBindTable:
             for name, val in varBindTableRow:
-                print('%s = %s' % (name, val.prettyPrint()))
+                print('%s = %s' % (name.prettyPrint(), val.prettyPrint()))
 
